# MateVM

./: .gdbcmds  .gitignore  ArchCheck.hs  HACKING  Main.hs  Makefile  Mate.hs  Playing.hs  README  README.md  Utilities.hs  debug.h  mate.cabal  trap.c
Compiler/Mate/: Backend.hs  Debug.hs  Flags.hs  Frontend.hs  Pipeline.hs  Pipeline.hs-boot  QuickCheck.hs  Types.hs  Utilities.hs  Utils.hs
Compiler/Mate/Backend/: NativeMachine.hs  NativeSizes.hs  X86CodeGenerator.hs  X86TrapHandling.hs
Compiler/Mate/Frontend/: CoalescingPass.hs  IR.hs  Linear.hs  LivenessPass.hs  MkGraph.hs  PassOneUseDef.hs  RegisterAllocation.hs  StupidRegisterAllocation.hs
Compiler/Mate/Old/: BasicBlocks.hs  X86CodeGen.hs
Compiler/Mate/Runtime/: BlockAllocation.hs  ClassHierarchy.hs  ClassHierarchy.hs-boot  ClassPool.hs  Debug.hs  GC.hs  GarbageAlloc.hs  GarbageAlloc.hs-boot  GenerationalGC.hs  JavaObjects.hs  JavaObjectsGC.hs  MemoryManager.hs  MethodPool.hs  MethodPool.hs-boot  MockBlockAllocation.hs  NativeMethods.hs  README.md  Rts.hs  RtsOptions.hs  StackTrace.hs  TwoSpaceAllocator.hs
Mate/: BasicBlocks.hs  ClassHierarchy.hs  ClassHierarchy.hs-boot  ClassPool.hs  Debug.hs  GC.hs  GarbageAlloc.hs  GarbageAlloc.hs-boot  JavaObjects.hs  JavaObjectsGC.hs  MemoryManager.hs  MethodPool.hs  MethodPool.hs-boot  NativeMachine.hs  NativeMaschine.hs  NativeSizes.hs  RegisterAllocation.hs  Rts.hs  StackTrace.hs  Strings.hs  TwoSpaceAllocator.hs  Types.hs  Utilities.hs  X86CodeGen.hs  X86TrapHandling.hs
Mate/Tests/: MockRefs.hs
Tests/: AllTests.hs  MockRefs.hs
doc/: README  TODO  related_work
examples/: RuntimeInfo.java
ffi/: mate-common.cabal  native.c  trap.c
ffi/src/: Signals.hs
java/io/: PrintStream.java
java/lang/: ArithmeticException.java  Character.java  Exception.java  IllegalArgumentException.java  Integer.java  NullPointerException.java  RuntimeException.java  String.java  System.java  Throwable.java
jmate/io/: PrintStream.java
jmate/lang/: Integer.java  MateRuntime.java  Runtime.java  System.java
rts/mock/: jmate_lang_MateRuntime.c  jmate_lang_MateRuntime.h  jmate_lang_MateRuntime.h.gch
scratch/: .ScratchHS.hs.swp  .gitignore  Analysis.hs  AnalysisTest.hs  Bench.hs  Frontend.hs  GC.hs  GCTest.java  Graph.hs  IR2.hs  IRwurm.hs  Makefile  MemoryManager.hs  Play.java  ScratchHS.hs  StateMonadStack.hs  Translation.lhs  run.sh
scratch/ffiTest/: .gitignore  Makefile  mate_support.c  prototypes.h  trapTest.hs
src/: BasicBlocks.hs  RegisterAllocation.hs
tests/: AbsurdlyHuge.java  ArgumentPassing1.java  Array1.java  Array2.java  Array3.java  Array4.java  BenchArray.java  BenchCompiletime.java  BenchException.java  BenchInstanceOf.java  BenchInterface.java  BenchObjectfield.java  BenchStaticfield.java  BenchVirtual.java  BigInstance1.java  Bool1.java  Bool2.java  CallConv1.java  CallConv2.java  CallConv3.java  CallConv4.java  CallConv5.java  CharArray1.java  CharArray2.java  ClassPath2.call  ClassPath2.compile  ClassPath2.java  ClassPath3.compile  ClassPath3.java  DifferentClass1.java  Div1.java  EvilFields.java  Example.java  Exception1.java  Exception12.java  Exception13.java  Exception2.java  Exception3.java  Exception5.java  Exception6.java  (+69 more)
tests/this/is/a/class/path/test/: ClassPath2.java
tests/todo/: CallConv3.java  ClassPath3.call  Exception10.java  Exception11.java  Exception4.java  Exception8.java  Garbage1.java  HelloWorld.java  Instance2.java  Instance6.java  Interface1.java  JARUsage2.java  MyProperties.java  Native2.java  ObjectCreation.java  Shift1.java  Static9.java  Strings1.java  Switch4.java  VarArgs1.java  While.java  WhileArray1.java
tests/todo/this/is/a/class/path/test/: ClassPath1.java
tmp/: Interface4.java
tools/: .gitignore  bench.sh  benchall.sh  installBoehm.sh  installhaskellenv.sh  openjdktest.sh
