name: mate-common
version: 0.0.1
cabal-version: -any
build-type: Simple
license: GPL-2
license-file: ""
copyright:
maintainer: lewurm@gmail.com, haraldsteinlechner@gmail.com
build-depends: base -any, bytestring -any
stability: none
homepage:
package-url:
bug-reports:
synopsis:
description: Provides mostly FFI based utility functions for Mate, the glorious JVM written in Haskell
category:
author: Bernhard Urban, Harald Steinlechner
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Signals
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources: trap.c native.c
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:

